fix[FE]: Style z-index of modal

--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -25,7 +25,7 @@
     @apply flex items-center justify-center;
   }
   .modal-wrapper {
-    @apply relative z-10 text-text-light;
+    @apply relative z-[100] text-text-light;
   }
   .modal-backdrop {
     @apply fixed inset-0 bg-black bg-opacity-50;
